manifests/todolist.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: todolist
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: todolist
  name: todolist
  namespace: todolist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todolist
  template:
    metadata:
      labels:
        app: todolist
    spec:
      containers:
      - image: ${REPO}/todolist:latest
        imagePullPolicy: Always
        name: java-todolist
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todolist
  name: todolist
  namespace: todolist
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: todolist
