manifests/ingresstls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: todolist
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: todolist-cred # must be the same as secret
    hosts:
    - todolist.smalls.xyz
