manifests/non-tls-gw-log4shell.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: todolist
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - todolist.smalls.xyz
    port:
      name: http
      number: 80
      protocol: HTTP
