manifests/blocklog4shell.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: block-log4shell
spec:
  hosts:
  - todolist.smalls.xyz
  - todolist.todolist.svc.cluster.local
  gateways:
  - default/todolist
  http:
  - match:
    - queryParams:
        title: 
          regex: \%24%7Bjndi%3A.*
          #regex: \$\{jndi:ldap://[^/]+/\#RemoteShell\}
    directResponse:
      status: 503
  - route:
    - destination:
        host: todolist.todolist.svc.cluster.local
        port:
          number: 80
