manifests/jndigwvs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: block-log4shell
spec:
  hosts:
  - "*"
  gateways:
  - todolist
  http:
  - match:
    - headers:
        user-agent:
          regex: ".*\$\{jndi:.*"
    directResponse:
      status: 503
  - route:
    - destination:
        host: todolist.default.svc.cluster.local
